--- a/public/modules/master/css/z003.css
+++ b/public/modules/master/css/z003.css
@@ -1,7 +1,7 @@
 
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
+    display: block; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     padding-top: 50px; /* Location of the box */
@@ -44,3 +44,7 @@
     overflow: hidden;
     text-overflow: ellipsis; 
   }
+  .alert{
+    display: none;
+  }
+  
