--- a/public/modules/master/css/z003.css
+++ b/public/modules/master/css/z003.css
@@ -1,7 +1,7 @@
 
 /* The Modal (background) */
 .modal {
-    display: block; /* Hidden by default */
+    display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     padding-top: 50px; /* Location of the box */
@@ -48,3 +48,6 @@
     display: none;
   }
   
+  .order-edit-form{
+    display: none;
+  }
